--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,7 +8,6 @@ body
     padding: 0;
 }
 
-
 #container
 {
     width: 70%;
@@ -16,6 +15,23 @@ body
     text-align: left;
     border: 1px solid #ddd;
     margin: 0 auto;
+}
+
+#cabecera
+{
+    background: #33A;
+    box-shadow: 0px 2px 20px 0px rgb(19, 19, 19);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
+
+#cabecera #tagline 
+{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
 }
 
 #container h1
