--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,15 +13,15 @@ body
     width: 70%;
     padding: 1em;
     text-align: left;
-    border: 1px solid #ddd;
+    border: 1px solid rgb(105, 212, 119);
     margin: 0 auto;
 }
 
 #cabecera
 {
-    background: #33A;
+    background: rgb(21, 179, 34);
     box-shadow: 0px 2px 20px 0px rgb(19, 19, 19);
-    color: white;
+    color: rgb(255, 175, 175);
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
